# CodingTest

./: .gitignore  CMakeLists.txt  CodingTestProject.sln  README.md
.github/scripts/: update_readme.py
.github/workflows/: update-readme.yml
CodingTestProject/: 20240104_Assignment.cpp  20241231_BallChange.cpp  CodingTestProject.vcxproj  CodingTestProject.vcxproj.filters
CodingTestProject/1000/: 1000.cpp
CodingTestProject/1001/: 1001.cpp
CodingTestProject/1008/: 1008.cpp
CodingTestProject/10171/: 10171.cpp
CodingTestProject/10172/: 10172.cpp
CodingTestProject/10430/: 10430.cpp
CodingTestProject/10798/: 10798.cpp
CodingTestProject/10807/: 10807.cpp
CodingTestProject/10808/: 10808.cpp
CodingTestProject/10809/: 10809.cpp
CodingTestProject/10810/: 10810.cpp
CodingTestProject/10811/: 10811.cpp
CodingTestProject/10813/: 10813.cpp
CodingTestProject/10818/: 10818.cpp
CodingTestProject/10869/: 10869.cpp
CodingTestProject/10871/: 10871.cpp
CodingTestProject/10926/: 10926.cpp
CodingTestProject/10950/: 10950.cpp
CodingTestProject/10951/: 10951.cpp
CodingTestProject/10952/: 10952.cpp
CodingTestProject/10988/: 10988.cpp
CodingTestProject/10998/: 10998.cpp
CodingTestProject/11021/: 11021.cpp
CodingTestProject/11022/: 11022.cpp
CodingTestProject/11382/: 11382.cpp
CodingTestProject/1152/: 1152.cpp
CodingTestProject/1157/: 1157.cpp
CodingTestProject/11654/: 11654.cpp
CodingTestProject/11718/: 11718.cpp
CodingTestProject/11720/: 11720.cpp
CodingTestProject/12865/: 12865.cpp
CodingTestProject/1316/: 1316.cpp
(+52 files in other folders)
